--- a/index.html
+++ b/index.html
@@ -4,10 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>this is a title</title>
+    <title>My personal Website</title>
 </head>
 <body>
-    <h1> this is a body</h1>
-    <p>this is a paragraph</p>
+    <table cellspacing="20">
+        <tr>
+           <td> <img src="flower.png" alt="flower profile picture"></td>
+            <td> <h1>Susmita</h1>
+                <p><em>founder and CTO of <strong> <a href="https://www.appbrewery.co/">The App Brewery</a></strong>.</em></p>
+                <p>I am a student and learing Web Developement.I ❤️ coffee and fruits.</p></td>
+        </tr>
+    </table>
+   
+    <hr>
+    <h3>books and coding</h3>
+    <ul>
+        <li>The complete ios app development Bootcamp</li>
+        <li>The complete web development Bootcamp</li>
+    </ul>
+    <hr>
+    <h3>learning Experience</h3>
+    <table cellspacing="10">
+        
+        <tr>
+            <th>Dates</th>
+            <th>learing</th>
+        </tr>
+
+        <tr>
+            <td>2021-2022</td>
+            <td>Learing c and c++ </td>
+        </tr>
+        <tr>
+            <td>2022</td>
+            <td>learning web development like html,css,javascript.</td>
+        </tr>
+    </table>
+    <hr>
+    <h3>Skills</h3>
+    <table cellspacing="10">
+        <tr>
+            <td>web development</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>design</td>
+            <td>⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>coding</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+    </table>
+    <hr>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contact.html">Contact Me</a>
+
 </body>
 </html>
