--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <tr>
            <td> <img src="flower.png" alt="flower profile picture"></td>
             <td> <h1>Susmita</h1>
-                <p><em>founder and CTO of <strong> <a href="https://www.appbrewery.co/">The App Brewery</a></strong>.</em></p>
+                <p><em>Best Student of<strong> <a href="https://www.udemy.com/">Udemy</a></strong>.</em></p>
                 <p>I am a student and learing Web Developement.I ❤️ coffee and fruits.</p></td>
         </tr>
     </table>
